Change country to country/area for reasons

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -10,7 +10,7 @@
   "app.signup.terms-and-conditions": "Terms and Conditions",
   "app.signup.acknowledgement": "You must agree to the Terms & Conditions",
   "app.signup.username-error": "Please enter a valid username. You are allowed A-Z, a-z and 0-9 (2 - 20 characters)",
-  "app.signup.select-your-country": "Select a country",
+  "app.signup.select-your-country": "Select a country/area",
   "app.signup.confirm-password": "Confirm your password",
   "app.signup.enter-your-email": "Enter your email",
   "admin.breadcrumb": "Admin",
@@ -205,7 +205,7 @@
   "events.track-type": "Track",
   "events.track-prefix": "Track {{trackId}}",
   "events.combined": "Combined",
-  "events.country": "Country",
+  "events.country": "Country/Area",
   "events.country-description": "Where will the event be hosted",
   "events.header": "Events administration",
   "events.loading": "Loading resources",
@@ -365,8 +365,10 @@
   "users.terms-and-conditions": "I have read and agree to the terms and conditions.",
   "users.terms-and-conditions-error": "Check the box to agree to the terms and conditions.",
   "users.terms-and-conditions-title": "Agreement",
-  "users.country": "Country",
-  "users.country-code": "Country cannot",
+  "users.country": "Country/Area",
+  "users.country-code": "Country/Area code",
+  "users.country-select": "Select country/area...",
+  "users.country-placeholder": "Country/Area...",
   "users.flag": "Flag",
   "users-list.header": "Users",
   "users-list.description": "Users are assigned roles that determine which actions they can perform in DREM.",
