Add in device links to make it easier to access online devices (only works...

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -163,6 +163,10 @@
   "devices.breadcrumb": "Devices",
   "devices.type": "Device type",
   "devices.car-information": "Device information",
+  "devices.device-links": "Device links",
+  "devices.device-links.timer": "Timer console",
+  "devices.device-links.car": "Car console",
+  "devices.device-links.camera": "Camera stream",
   "devices.car-ip": "Device IP",
   "devices.description": "List of devices registered in DREM",
   "devices.fleet-id": "Fleet ID",
