Removed SSM code / id as separate boxes as they are never used and moved SSM activation details from the collapsed container

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -85,14 +85,14 @@
   "AdminActivation.car-activation.password": "Password",
   "AdminActivation.car-activation.script-lower": "script",
   "AdminActivation.car-activation.script-warning": "Note: This script will disable the car GUI",
-  "AdminActivation.car-activation.script": "Script",
+  "AdminActivation.car-activation.script": "Car tweaks & activation",
   "AdminActivation.car-activation.ssid-placeholder": "ssid",
   "AdminActivation.car-activation.ssid": "SSID",
-  "AdminActivation.car-activation.ssm-only": "SSM Only",
+  "AdminActivation.car-activation.ssm-only": "SSM activation only",
   "AdminActivation.car-activation.wifi-config": "Optional Wi-Fi configuration for networks with hidden SSIDs",
   "AdminActivation.car-activation.wifi-placeholder": "wifimagic",
   "AdminActivation.car-activation.wifi": "WiFi password",
-  "AdminActivation.car-activation.version-warning": "DREM is designed for use with AWS DeepRacer cars running firmware version 20.04 and above. Earlier firmware versions are not supported.",
+  "AdminActivation.car-activation.version-warning": "DREM is designed for use with AWS DeepRacer cars running firmware version 20.04 and above. Earlier firmware versions 16.04 is not supported.",
   "timer-activation.header": "Timer activation",
   "timer-activation.description": "Register and install timer code on RPi devices",
   "timer-activation.fleet": "Fleet",
@@ -103,8 +103,8 @@
   "timer-activation.hostname": "Hostname",
   "timer-activation.password-placeholder": "password",
   "timer-activation.password": "Password",
-  "timer-activation.script": "Script",
-  "timer-activation.ssm-only": "SSM Only",
+  "timer-activation.script": "Timer install & activation",
+  "timer-activation.ssm-only": "SSM activation only",
   "label-printer.download-printable-label": "Download printable label",
   "label-printer.download-printable-labels": "Download printable labels",
   "carmodelupload.clear-filter": "Clear filter",
