--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -18,35 +18,43 @@
   "operator.breadcrumb": "Operator",
   "device-management.breadcrumb": "Device management",
   "event-management.breadcrumb": "Event management",
-  "button.cancel": "Cancel",
-  "button.clear-selected": "Clear selected",
-  "button.clear-filters": "Clear filters",
-  "button.confirm": "Confirm",
-  "button.save": "Save",
-  "button.save-changes": "Save changes",
-  "common.button.copy": "Copy",
-  "button.delete": "Delete",
-  "button.edit": "Edit",
-  "button.create": "Create",
-  "button.next": "Next",
-  "button.ok": "Ok",
-  "common.copied-to-clipboard": "Copied to clipboard",
-  "common.in-progress": "In progress",
-  "common.error": "Error",
-  "common.success": "Success",
-  "common.info": "Info",
-  "common.yes": "Yes",
-  "common.no": "No",
-  "common.no-matches": "No matches",
-  "common.we-cant-find-a-match": "We can't find a match",
-  "common.panel.open": "Open panel",
-  "common.panel.close": "Close panel",
-  "common.panel.position-side": "Side",
-  "common.panel.position-bottom": "Bottom",
-  "common.panel.split-panel-preference-title": "Split panel preferences",
-  "common.panel.split-panel-position-label": "Split panel position",
-  "common.panel.split-panel-position-description": "Choose the default split panel position for the service.",
-  "common.panel.split-panel-resize-label": "Resize split panel",
+  "button": {
+    "cancel": "Cancel",
+    "clear-selected": "Clear selected",
+    "clear-filters": "Clear filters",
+    "confirm": "Confirm",
+    "save": "Save",
+    "save-changes": "Save changes",
+    "delete": "Delete",
+    "previous": "Previous",
+    "edit": "Edit",
+    "create": "Create",
+    "next": "Next",
+    "ok": "Ok",
+    "finish": "Finish",
+    "optional": "Optional"
+  },
+  "common": {
+    "button.copy": "Copy",
+    "copied-to-clipboard": "Copied to clipboard",
+    "in-progress": "In progress",
+    "error": "Error",
+    "success": "Success",
+    "info": "Info",
+    "yes": "Yes",
+    "no": "No",
+    "steps": "Steps",
+    "no-matches": "No matches",
+    "we-cant-find-a-match": "We can't find a match",
+    "panel.open": "Open panel",
+    "panel.close": "Close panel",
+    "panel.position-side": "Side",
+    "panel.position-bottom": "Bottom",
+    "panel.split-panel-preference-title": "Split panel preferences",
+    "panel.split-panel-position-label": "Split panel position",
+    "panel.split-panel-position-description": "Choose the default split panel position for the service.",
+    "panel.split-panel-resize-label": "Resize split panel"
+  },
   "filtering.filtering-aria-label": "Filtering",
   "filtering.dismiss-aria-label": "Dismiss",
   "filtering.clear-aria-label": "Clear",
@@ -404,11 +412,12 @@
   "homeCards.adminHomeCards.events": "Events",
   "homeCards.adminHomeCards.fleets-description": "Create and administer your fleet of devices.",
   "homeCards.adminHomeCards.fleets": "Fleets",
-  "homeCards.adminHomeCards.time-keeper-description": "Event timekeeper.",
+  "homeCards.adminHomeCards.time-keeper-description": "Event ",
   "homeCards.adminHomeCards.time-keeper": "Timekeeper",
   "homeCards.adminHomeCards.registration": "Registration",
   "homeCards.adminHomeCards.registration-description": "Racers register themselves or are registered by administrators to DREM.",
   "models.all-header": "Models",
+  "models.models": "Models",
   "models.breadcrumb": "Model management",
   "models.models.breadcrumb": "Models",
   "models.all-breadcrumb": "All models",
@@ -465,67 +474,75 @@
   "table.striped-rows-description": "Select to add alternating shaded rows",
   "table.content-density": "Compact mode",
   "table.content-density-description": "Select to display content in a denser, more compact mode",
-  "timekeeper.breadcrumb": "Timekeeper",
-  "timekeeper.automated-timer-msg-connected": "Connected",
-  "timekeeper.automated-timer-msg-not-connected": "Not connected",
-  "timekeeper.capture-lap": "Capture lap",
-  "timekeeper.car-reset": "Car reset",
-  "timekeeper.current-lap": "Current lap",
-  "timekeeper.current-racer": "Racer name",
-  "timekeeper.dnf": "Did not finish",
-  "timekeeper.end-race": "End race",
-  "timekeeper.race-setup-page.page-header": "Timekeeper: Select racer",
-  "timekeeper.race-setup-page.page-description": "Choose a racer to time on the track.",
-  "timekeeper.race-setup-page.racing-on-trackId": "on",
-  "timekeeper.race-page.page-header": "Timekeeper",
-  "timekeeper.race-page.page-description": "The Timekeeper starts and ends races, captures individual laps, and records car resets.",
-  "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
-  "timekeeper.race-page.warning-modal.header": "Warning!",
-  "timekeeper.race-page.race-format-header": "Race format",
-  "timekeeper.race-page.automated-timer-header": "Automatic timer",
-  "timekeeper.race-page.automated-timer-connected": "Connected",
-  "timekeeper.race-page.automated-timer-not-connected": "Not connected",
-  "timekeeper.race-page.resume-race": "Resume race",
-  "timekeeper.end-session.discard-race": "Discard race",
-  "timekeeper.end-session.race-discarded": "Race discarded!",
-  "timekeeper.end-session.submit-race": "Submit race",
-  "timekeeper.end-session.warning": "Warning, race has been deleted",
-  "timekeeper.end-session.race-info": "Race info",
-  "timekeeper.end-session.customer": "Customer",
-  "timekeeper.end-session.raced-by-proxy": "Raced by proxy",
-  "timekeeper.end-session.laps-panel-header": "Laps",
-  "timekeeper.end-session.warning-message": "Discarding the race will delete the race without saving it!",
-  "timekeeper.end-session.page-header": "Timekeeper: Submit race",
-  "timekeeper.end-session.page-description": "Check lap information and racer details before submitting a race to the leaderboard.",
-  "timekeeper.fastest-lap": "Fastest lap",
-  "timekeeper.lap-table.valid-header": "Valid",
-  "timekeeper.lap-table.valid": "Yes",
-  "timekeeper.lap-table.not-valid": "No",
-  "timekeeper.lap-table.lap-number": "Lap",
-  "timekeeper.lap-table.lap-time": "Time",
-  "timekeeper.lap-table.loading-resources": "Loading resources",
-  "timekeeper.lap-table.resets": "Resets",
-  "timekeeper.lap-table.average": "Average",
-  "timekeeper.avg-lap-table.header": "Fastest average lap",
-  "timekeeper.avg-lap-table.loading-resources": "Loading resources",
-  "timekeeper.avg-lap-table.from-lap": "From lap",
-  "timekeeper.avg-lap-table.to-lap": "To lap",
-  "timekeeper.avg-lap-table.average": "Average",
-  "timekeeper.pause-race": "Pause race",
-  "timekeeper.racer-selector.loading-events": "Loading events",
-  "timekeeper.racer-selector.loading-racers": "Loading racers",
-  "timekeeper.racer-selector.loading": "loading",
-  "timekeeper.racer-selector.select-racer": "Racer name",
-  "timekeeper.racer-selector.selected": "Selected",
-  "timekeeper.race-setup-page.racer-description": "Select which racer to time",
-  "timekeeper.racer-selector.races-by-user": "Event races",
-  "timekeeper.racer-selector.number-of-current-races": "Completed races:",
-  "timekeeper.racer-selector.max-number-of-allowed-races": "Max races:",
-  "timekeeper.recorded-laps": "Recorded laps",
-  "timekeeper.resets": "Resets",
-  "timekeeper.start-race": "Start race",
-  "timekeeper.time-left": "Time left",
-  "timekeeper.undo-false-finish": "Undo false finish",
+  "timekeeper": {
+    "breadcrumb": "Timekeeper",
+    "automated-timer-msg-connected": "Connected",
+    "automated-timer-msg-not-connected": "Not connected",
+    "capture-lap": "Capture lap",
+    "car-reset": "Car reset",
+    "current-lap": "Current lap",
+    "current-racer": "Racer name",
+    "dnf": "Did not finish",
+    "end-race": "End race",
+    "race-setup-page.page-header": "Timekeeper: Select racer",
+    "race-setup-page.page-description": "Choose a racer to time on the track.",
+    "race-setup-page.racing-on-trackId": "on",
+    "race-page.page-header": "Timekeeper",
+    "race-page.page-description": "The Timekeeper starts and ends races, captures individual laps, and records car resets.",
+    "race-page.warning-modal.text": "Are you sure you want to end the race?",
+    "race-page.warning-modal.header": "Warning!",
+    "race-page.race-format-header": "Race format",
+    "race-page.automated-timer-header": "Automatic timer",
+    "race-page.automated-timer-connected": "Connected",
+    "race-page.automated-timer-not-connected": "Not connected",
+    "race-page.resume-race": "Resume race",
+    "end-session.discard-race": "Discard race",
+    "end-session.race-discarded": "Race discarded!",
+    "end-session.submit-race": "Submit race",
+    "end-session.warning": "Warning, race has been deleted",
+    "end-session.race-info": "Race info",
+    "end-session.customer": "Customer",
+    "end-session.raced-by-proxy": "Raced by proxy",
+    "end-session.laps-panel-header": "Laps",
+    "end-session.warning-message": "Discarding the race will delete the race without saving it!",
+    "end-session.page-header": "Timekeeper: Submit race",
+    "end-session.page-description": "Check lap information and racer details before submitting a race to the leaderboard.",
+    "fastest-lap": "Fastest lap",
+    "lap-table.valid-header": "Valid",
+    "lap-table.valid": "Yes",
+    "lap-table.not-valid": "No",
+    "lap-table.lap-number": "Lap",
+    "lap-table.lap-time": "Time",
+    "lap-table.loading-resources": "Loading resources",
+    "lap-table.resets": "Resets",
+    "lap-table.average": "Average",
+    "avg-lap-table.header": "Fastest average lap",
+    "avg-lap-table.loading-resources": "Loading resources",
+    "avg-lap-table.from-lap": "From lap",
+    "avg-lap-table.to-lap": "To lap",
+    "avg-lap-table.average": "Average",
+    "pause-race": "Pause race",
+    "racer-selector.loading-events": "Loading events",
+    "racer-selector.loading-racers": "Loading racers",
+    "racer-selector.loading": "loading",
+    "racer-selector.select-racer": "Racer name",
+    "racer-selector.selected": "Selected",
+    "race-setup-page.racer-description": "Select which racer to time",
+    "racer-selector.races-by-user": "Event races",
+    "racer-selector.number-of-current-races": "Completed races:",
+    "racer-selector.max-number-of-allowed-races": "Max races:",
+    "recorded-laps": "Recorded laps",
+    "resets": "Resets",
+    "start-race": "Start race",
+    "time-left": "Time left",
+    "undo-false-finish": "Undo false finish",
+    "wizard": {
+      "select-racer": "Select racer",
+      "select-models": "Select models",
+      "select-car": "Select car",
+      "upload-progress": "Upload progress"
+    }
+  },
   "event-selector-modal.select-track": "Track",
   "event-selector-modal.event": "Event",
   "event-selector-modal.event-section-header": "Select an event and a track",
@@ -552,6 +569,7 @@
   "topnav.search": "Search",
   "topnav.sign-out": "Sign out",
   "topnav.time-keeper": "Timekeeper",
+  "topnav.time-keeper-wizard": "Timekeeper wizard",
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race statistics",
