Upload Wizard working Error checking absent

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -570,7 +570,7 @@
   "topnav.search": "Search",
   "topnav.sign-out": "Sign out",
   "topnav.time-keeper": "Timekeeper",
-  "topnav.time-keeper-wizard": "Timekeeper wizard",
+  "topnav.time-keeper-wizard": "Upload",
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race statistics",
