--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -32,7 +32,10 @@
     "next": "Next",
     "ok": "Ok",
     "finish": "Finish",
-    "optional": "Optional"
+    "optional": "Optional",
+    "skip": "Skip",
+    "back": "Back",
+    "submit-race": "Submit race"
   },
   "common": {
     "button.copy": "Copy",
@@ -541,7 +544,10 @@
       "select-racer": "Select racer",
       "select-models": "Select models",
       "select-car": "Select car",
-      "upload-progress": "Upload progress"
+      "upload-progress": "Upload progress",
+      "select-racer-error": "Select Racer",
+      "timekeeper": "Timekeeper",
+      "submit-race": "Submit race"
     }
   },
   "event-selector-modal.select-track": "Track",
@@ -570,7 +576,7 @@
   "topnav.search": "Search",
   "topnav.sign-out": "Sign out",
   "topnav.time-keeper": "Timekeeper",
-  "topnav.time-keeper-wizard": "Upload",
+  "topnav.time-keeper-wizard": "Timekeeper wizard",
   "topnav.commentator": "Commentator",
   "topnav.user-profile": "Settings",
   "topnav.commentator-race": "Race statistics",
