Enabled "Skip to" and  previous/next handling logic

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -546,6 +546,8 @@
       "select-car": "Select car",
       "upload-progress": "Upload progress",
       "select-racer-error": "Select Racer",
+      "no-models-selected-error": "Select at least one model or skip",
+      "no-car-selected-error": "Select a car or skip",
       "timekeeper": "Timekeeper",
       "submit-race": "Submit race"
     }
