Added car to legacy timekeeper and (read only) race management

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -301,6 +301,7 @@
   "race-admin.resets": "Resets",
   "race-admin.is-valid": "Valid",
   "race-admin.aut-timer-connected": "Automatic timer",
+  "race-admin.car": "Car",
   "race-admin.edit-race": "Edit race",
   "race-admin.delete-laps": "Delete lap(s)",
   "race-admin.delete-races": "Delete race(s)",
@@ -518,6 +519,7 @@
     "lap-table.not-valid": "No",
     "lap-table.lap-number": "Lap",
     "lap-table.lap-time": "Time",
+    "lap-table.lap-car": "Car",
     "lap-table.loading-resources": "Loading resources",
     "lap-table.resets": "Resets",
     "lap-table.average": "Average",
