--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -627,8 +627,10 @@
   "commentator.race.graph.fastestLap": "Fastest lap time",
   "commentator.race.graph.invalidLaps": "Not valid",
   "commentator.race.graph.validLaps": "Valid",
-  "commentator.race.graph.fastestRaceLap": "Fastest",
+  "commentator.race.graph.fastestRaceLap": "Fastest of Race",
+  "commentator.race.graph.fastestOfEventRaceLap": "Fastest of Event",
   "commentator.race.graph.fastestAvgWindow": "Fastest average window",
+  "commentator.race.graph.fastestOfEventAvgWindow": "Fastest average window of Event",
   "commentator.race.status": "Status",
   "commentator.race.status.NO_RACER_SELECTED": "Not running",
   "commentator.race.status.READY_TO_START": "Ready to start",
