--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -267,6 +267,7 @@
   "events.tracks.reinvent-2019": "re:Invent 2019",
   "events.tracks.reinvent-2022": "re:Invent 2022",
   "events.tracks.reinvent-2023": "re:Invent 2023",
+  "events.tracks.forever-raceway": "Forever Raceway",
   "events.tracks.summit-2022": "2022 Summit speedway",
   "events.tracks.atoz-speedway": "A to Z Speedway",
   "events.tracks.other": "Other",
