--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -23,6 +23,7 @@
     "clear-selected": "Clear selected",
     "clear-filters": "Clear filters",
     "confirm": "Confirm",
+    "download": "Download",
     "save": "Save",
     "save-changes": "Save changes",
     "delete": "Delete",
@@ -423,19 +424,19 @@
   "users-list.header": "Users",
   "users-list.description": "Users are assigned roles that determine which actions they can perform in DREM.",
   "notifications": {
-      "item-type-event": "Event",
-      "item-type-user": "User",
-      "item-type-race": "Race",
-      "item-type-model": "Model",
-      "creating-item": "Creating {{itemType}} {{itemName}}...",
-      "create-item-success": "{{itemType}} {{itemName}} created",
-      "create-item-error": "{{itemType} {{itemName}} could not be created, {{errorMessage}}",
-      "updating-item": "Updating {{itemType}} {{itemName}}...",
-      "update-item-success": "{{itemType}} {{itemName}} updated",
-      "update-item-error": "{{itemType}} {{itemName}} could not be updated, {{errorMessage}}",
-      "deleting-item": "Deleting {{itemType}} {{itemName}}...",
-      "delete-item-success": "{{itemType}} {{itemName}} deleted",
-      "delete-item-error": "{{itemType}} {{itemName}} could not be deleted, {{errorMessage}}"
+    "item-type-event": "Event",
+    "item-type-user": "User",
+    "item-type-race": "Race",
+    "item-type-model": "Model",
+    "creating-item": "Creating {{itemType}} {{itemName}}...",
+    "create-item-success": "{{itemType}} {{itemName}} created",
+    "create-item-error": "{{itemType} {{itemName}} could not be created, {{errorMessage}}",
+    "updating-item": "Updating {{itemType}} {{itemName}}...",
+    "update-item-success": "{{itemType}} {{itemName}} updated",
+    "update-item-error": "{{itemType}} {{itemName}} could not be updated, {{errorMessage}}",
+    "deleting-item": "Deleting {{itemType}} {{itemName}}...",
+    "delete-item-success": "{{itemType}} {{itemName}} deleted",
+    "delete-item-error": "{{itemType}} {{itemName}} could not be deleted, {{errorMessage}}"
   },
   "home.breadcrumb": "Home",
   "homeCards": {
@@ -642,54 +643,54 @@
   "commentator": {
     "breadcrumb": "Commentator",
     "race": {
-    "header": "Race statistics",
-    "stats": "Details about the current racer and race.",
-    "breadcrumb": "Race statistics",
-    "actual-racer-stats-header": "Current racer",
-    "actual-racer-stats": "",
-    "time": "Time",
-    "racerName": "Racer name",
-    "racerFastestLap": "Fastest time",
-    "racerSlowestLap": "Slowest time",
-    "overallFastestLaps": "Fastest racer",
-    "loading": "Loading resources",
-    "overallSlowestLaps": "Slowest racer",
-    "currentLapTime": "Current lap time",
-    "timeLeft": "Time left",
-    "lapCount": "# of laps ",
-    "invalidLapCount": "Not valid laps",
-    "historicalRacerStats": "",
-    "historicalRacerStats.header_one": "Data from previous <1>{{count}}</1> run",
-    "historicalRacerStats.header_other": "Data from previous <1>{{count}}</1> runs",
-    "averagelapCount": "Average laps per run",
-    "restSum": "# of Resets",
-    "averageResetsPerLap": "Average resets per lap",
-    "fastest": "Fastest lap (Run)",
-    "fastestLapId": "Lap",
-    "fastestAvg": "Fastest avg. (Run)",
-    "fastestAvgWindow": "Laps",
-    "rank": "Rank",
-    "gapToFastest": "Gap to 1st",
-    "actualPosition": "Actual position",
-    "newPosition": "New position",
-    "graph": {
-      "fastestAvgLap": "Fastest average lap time",
-      "fastestLap": "Fastest lap time",
-      "invalidLaps": "Not valid",
-      "validLaps": "Valid",
-      "fastestRaceLap": "Fastest of Race",
-      "fastestOfEventRaceLap": "Fastest of Event",
-      "fastestAvgWindow": "Fastest average window",
-      "fastestOfEventAvgWindow": "Fastest average window of Event"
-    },
-    "status": "Status",
-    "status.NO_RACER_SELECTED": "Not running",
-    "status.READY_TO_START": "Ready to start",
-    "status.RACE_IN_PROGRESS": "Race running",
-    "status.RACE_PAUSED": "Race paused",
-    "status.RACE_FINSIHED": "Race finished",
-    "status.RACE_SUBMITTED": "Race finished",
-    "status.undefined": "Not running"
+      "header": "Race statistics",
+      "stats": "Details about the current racer and race.",
+      "breadcrumb": "Race statistics",
+      "actual-racer-stats-header": "Current racer",
+      "actual-racer-stats": "",
+      "time": "Time",
+      "racerName": "Racer name",
+      "racerFastestLap": "Fastest time",
+      "racerSlowestLap": "Slowest time",
+      "overallFastestLaps": "Fastest racer",
+      "loading": "Loading resources",
+      "overallSlowestLaps": "Slowest racer",
+      "currentLapTime": "Current lap time",
+      "timeLeft": "Time left",
+      "lapCount": "# of laps ",
+      "invalidLapCount": "Not valid laps",
+      "historicalRacerStats": "",
+      "historicalRacerStats.header_one": "Data from previous <1>{{count}}</1> run",
+      "historicalRacerStats.header_other": "Data from previous <1>{{count}}</1> runs",
+      "averagelapCount": "Average laps per run",
+      "restSum": "# of Resets",
+      "averageResetsPerLap": "Average resets per lap",
+      "fastest": "Fastest lap (Run)",
+      "fastestLapId": "Lap",
+      "fastestAvg": "Fastest avg. (Run)",
+      "fastestAvgWindow": "Laps",
+      "rank": "Rank",
+      "gapToFastest": "Gap to 1st",
+      "actualPosition": "Actual position",
+      "newPosition": "New position",
+      "graph": {
+        "fastestAvgLap": "Fastest average lap time",
+        "fastestLap": "Fastest lap time",
+        "invalidLaps": "Not valid",
+        "validLaps": "Valid",
+        "fastestRaceLap": "Fastest of Race",
+        "fastestOfEventRaceLap": "Fastest of Event",
+        "fastestAvgWindow": "Fastest average window",
+        "fastestOfEventAvgWindow": "Fastest average window of Event"
+      },
+      "status": "Status",
+      "status.NO_RACER_SELECTED": "Not running",
+      "status.READY_TO_START": "Ready to start",
+      "status.RACE_IN_PROGRESS": "Race running",
+      "status.RACE_PAUSED": "Race paused",
+      "status.RACE_FINSIHED": "Race finished",
+      "status.RACE_SUBMITTED": "Race finished",
+      "status.undefined": "Not running"
     }
   },
   "user-profile": {
